--- a/最終課題/css/style.css
+++ b/最終課題/css/style.css
@@ -119,8 +119,31 @@ aside {
 }
 
 .sub-title {
-	margin-top: 50px;
+	margin-top: 100px;
 	border-bottom: 2px #0bd solid;
+}
+
+/* おみくじ
+------------------------------*/
+.omikuzi {
+	margin-top: 100px;
+	border: 4px solid;
+	border-color: #C0C0C0;
+}
+
+.omikuzi h3 {
+	border-bottom: 2px #0bd solid;
+	text-align: center;
+}
+
+.omikuzi button {
+	font-size: 15px;
+	color: #fff;
+	background-color: #ed6100;
+}
+
+.omikuzi p {
+	text-align: center;
 }
 
 /* 観光地
@@ -163,11 +186,88 @@ aside {
 	font-size: 20px;
 }
 
+#haikaratto {
+	width: 300px;
+}
+
+#kintaikyou2 {
+	width: 300px;
+}
+
 .location-map {
-	margin-top: 100px;
+	margin-top: 175px;
 	width: 40%;
 }
 /* iframe */
 iframe {
 	width: 100%;
+}
+
+#saigo {
+	text-align: center;
+}
+
+/* カジノ
+------------------------------*/
+#kazino {
+	background-image: url(../images/kazino.jpg);
+	background-size: cover;
+	height: 160px;
+	margin-bottom: 20px;
+}
+
+#kuro {
+	color: #B6FF01;
+}
+
+#toranpu {
+	width: 200px;
+}
+
+.HiandLow {
+}
+.gamen {
+	display: flex;
+	justify-content: center;
+}
+
+#hantei {
+	font-size: 30px;
+	text-align: center;
+}
+
+#yosou {
+	display: flex;
+	padding: 20px;
+}
+a.btn_02 {
+	display: block;
+	text-align: center;
+	vertical-align: middle;
+	text-decoration: none;
+	width: 120px;
+	margin: auto;
+	padding: 1rem 4rem;
+	font-weight: bold;
+	border: 2px solid #27acd9;
+	background: #27acd9;
+	color: #fff;
+	transition: 0.5s;
+}
+
+#up {
+	margin-left: 5px;
+}
+
+#down {
+	margin-left: 5px;
+}
+
+#status {
+	display: flex;
+	justify-content: center;
+}
+
+#status p {
+	margin: 20px;
 }
